[package]
name = "iota-example"
version = "0.1.0"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs" }
smol-potat = "0.1"
smol = { version = "0.1.2", features = ["tokio02"] }
anyhow = "1.0.28"